--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 <body>
     <div class="container">
         <h1>Добро пожаловать в PNS Bot</h1>
-        <p>Скачайте последнюю версию установщика:</p>
-        <a class="btn" href="https://github.com/EXE-Kroxx/pns_bot_releases/releases/download/1.2.5/PNS_BOT_setup.exe">
+        <p>Скачайте последнюю версию установщика с YANDEX DISK:</p>
+        <a class="btn" href="https://disk.yandex.ru/d/9NbQ3tWCgUlOGQ">
             ⬇ Скачать
         </a>
     </div>
