--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
         <h1>Добро пожаловать в PNS Bot</h1>
         <p>Скачайте последнюю версию установщика с YANDEX DISK:</p>
         <a class="btn" href="https://disk.yandex.ru/d/9NbQ3tWCgUlOGQ">
-            ⬇ Скачать
+            ⬇ Скачать c GITHUB
+        </a>
+        <a class="btn" href="https://disk.yandex.ru/d/9NbQ3tWCgUlOGQ">
+            ⬇ Скачать с YANDEX DISK
         </a>
     </div>
 </body>
