--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <h1>Добро пожаловать в PNS Bot</h1>
         <p>Скачайте последнюю версию установщика:</p>
         <div class="btn-container">
-            <a class="btn btn-github" href="https://github.com/user/repo/releases/latest">
+            <a class="btn btn-github" href="https://github.com/EXE-Kroxx/pns_bot_releases/releases/download/1.2.5/PNS_BOT_setup.exe">
                 ⬇ Скачать с GITHUB
             </a>
             <a class="btn btn-yandex" href="https://disk.yandex.ru/d/9NbQ3tWCgUlOGQ">
