--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Добро пожаловать в PNS Bot</h1>
-        <p>Скачайте последнюю версию установщика:</p>
+        <h1>Добро пожаловать!</h1>
+        <p>Скачайте последнюю версию PNS Bot установщика:</p>
         <div class="btn-container">
             <a class="btn btn-github" href="https://github.com/EXE-Kroxx/pns_bot_installer/releases/download/1.0.0/pns_bot_setup.exe">
                 ⬇ Скачать с GITHUB
