--- a/index.html
+++ b/index.html
@@ -83,13 +83,17 @@
         .social-link {
             display: flex;
             align-items: center;
+            justify-content: center;
             gap: 8px;
             text-decoration: none;
             font-size: 16px;
+            font-weight: bold;
             color: white;
-            padding: 10px 15px;
+            padding: 10px;
             border-radius: 8px;
             transition: 0.3s;
+            width: 100px;
+            height: 40px;
         }
         .social-link:hover {
             transform: scale(1.1);
@@ -98,8 +102,10 @@
             width: 20px;
             height: 20px;
         }
+
+        /* Цвета кнопок */
         .tg { background: #0088cc; }
-        .yt { background: #ff0000; }
+        .yt { background: white; color: #000000; }
         .vk { background: #4c75a3; }
         .rtb { background: #cc0000; }
     </style>
