--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         .tg { background: #0088cc; }
         .yt { background: white; color: #000000; }
         .vk { background: #4c75a3; }
-        .rtb { background: #cc0000; }
+        .rtb { background: #ed143b; }
     </style>
 </head>
 <body>
