--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <a class="btn btn-github" href="https://github.com/EXE-Kroxx/pns_bot_installer/releases/download/1.0.0/pns_bot_setup.exe">
                 ⬇ Скачать с GITHUB
             </a>
-            <a class="btn btn-yandex" href="https://disk.yandex.ru/d/9NbQ3tWCgUlOGQ">
+            <a class="btn btn-yandex" href="https://disk.yandex.ru/d/dMWWADy9vZ6R1g">
                 ⬇ Скачать с YANDEX DISK
             </a>
         </div>
