--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
         <h1>Добро пожаловать!</h1>
         <p>Скачайте последнюю версию PNS Bot установщика:</p>
         <div class="btn-container">
-            <a class="btn btn-github" href="https://github.com/EXE-Kroxx/pns_bot_installer/releases/download/1.0.0/pns_bot_setup.exe">
-                ⬇ Скачать с GITHUB
+            <a class="btn btn-github" href="https://drive.google.com/file/d/1EuFbQzK1YajcIt5bdTAN7AvQLRvpKXDd/view?usp=sharing">
+                ⬇ Скачать с GOOGLE DRIVE
             </a>
             <a class="btn btn-yandex" href="https://disk.yandex.ru/d/dMWWADy9vZ6R1g">
                 ⬇ Скачать с YANDEX DISK
