--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
         <h1>Добро пожаловать!</h1>
         <p>Скачайте последнюю версию PNS Bot установщика:</p>
         <div class="btn-container">
-            <a class="btn btn-github" href="https://drive.google.com/file/d/191r7gzAjw30SOXro_Nmu0WcIUr5YAPDj/view?usp=sharing">
+            <a class="btn btn-github" href="https://drive.google.com/file/d/1Z47OSSR7AIZ1mK-DscspyKdVRlJBUbhq/view?usp=sharing">
                 ⬇ Скачать с GOOGLE DRIVE
             </a>
-            <a class="btn btn-yandex" href="https://disk.yandex.ru/d/V-pbHwc9qNalTw">
+            <a class="btn btn-yandex" href="https://disk.yandex.ru/d/wYFWne9Ouoh-PQ">
                 ⬇ Скачать с YANDEX DISK
             </a>
         </div>
