--- a/index.html
+++ b/index.html
@@ -69,6 +69,14 @@
             background: #ffdb4d;
             transform: scale(1.05);
         }
+        .btn-beta {
+            background: #555;
+            color: white;
+        }
+        .btn-beta:hover {
+            background: #777;
+            transform: scale(1.05);
+        }
         .btn:active {
             transform: scale(0.98);
         }
@@ -121,6 +129,9 @@
             </a>
             <a class="btn btn-yandex" href="https://disk.yandex.ru/d/S-RktAKSgGhe1w">
                 ⬇ Скачать с YANDEX DISK
+            </a>
+            <a class="btn btn-beta" href="https://example.com/beta-version">
+                ⬇ Скачать БЕТА-ВЕРСИЮ
             </a>
         </div>
 
