--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <a class="btn btn-yandex" href="https://disk.yandex.ru/d/S-RktAKSgGhe1w">
                 ⬇ Скачать с YANDEX DISK
             </a>
-            <a class="btn btn-beta" href="https://disk.yandex.ru/d/v_W9qVqHHr0pbA">
+            <a class="btn btn-beta" href="https://disk.yandex.ru/d/R8F1NkEC_MmHrQ">
                 ⬇ Скачать БЕТА-ВЕРСИЮ
             </a>
         </div>
