--- a/index.html
+++ b/index.html
@@ -124,14 +124,11 @@
         <h1>Добро пожаловать!</h1>
         <p>Скачайте последнюю версию PNS Bot установщика:</p>
         <div class="btn-container">
-            <a class="btn btn-github" href="https://drive.google.com/file/d/1oOfnThc_fZIGFYRx4S6kBnctxib3PlLm/view?usp=sharing">
+            <a class="btn btn-github" href="https://drive.google.com/file/d/1D3euyDiwJToDaGhokiiHrsu3ldVirweJ/view?usp=sharing">
                 ⬇ Скачать с GOOGLE DRIVE
             </a>
-            <a class="btn btn-yandex" href="https://disk.yandex.ru/d/S-RktAKSgGhe1w">
+            <a class="btn btn-yandex" href="https://disk.yandex.ru/d/go86hozL_7GKCw">
                 ⬇ Скачать с YANDEX DISK
-            </a>
-            <a class="btn btn-beta" href="https://disk.yandex.ru/d/R8F1NkEC_MmHrQ">
-                ⬇ Скачать БЕТА-ВЕРСИЮ
             </a>
         </div>
 
