--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
         <h1>Добро пожаловать!</h1>
         <p>Скачайте последнюю версию PNS Bot установщика:</p>
         <div class="btn-container">
-            <a class="btn btn-github" href="https://drive.google.com/file/d/1D3euyDiwJToDaGhokiiHrsu3ldVirweJ/view?usp=sharing">
+            <a class="btn btn-github" href="https://drive.google.com/file/d/18Xv3cdnu8kNYh-unOYUTHNSwXLuQU1BB/view?usp=sharing">
                 ⬇ Скачать с GOOGLE DRIVE
             </a>
-            <a class="btn btn-yandex" href="https://disk.yandex.ru/d/go86hozL_7GKCw">
+            <a class="btn btn-yandex" href="https://disk.yandex.ru/d/VcE7JVdRVq1cpQ">
                 ⬇ Скачать с YANDEX DISK
             </a>
         </div>
