--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <a class="btn btn-github" href="https://drive.google.com/file/d/18Xv3cdnu8kNYh-unOYUTHNSwXLuQU1BB/view?usp=sharing">
                 ⬇ Скачать с GOOGLE DRIVE
             </a>
-            <a class="btn btn-yandex" href="https://disk.yandex.ru/d/VcE7JVdRVq1cpQ">
+            <a class="btn btn-yandex" href="https://disk.yandex.ru/d/-Oxh2Rp1EcgVzg">
                 ⬇ Скачать с YANDEX DISK
             </a>
         </div>
