--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
         <h1>Добро пожаловать!</h1>
         <p>Скачайте последнюю версию PNS Bot установщика:</p>
         <div class="btn-container">
-            <a class="btn btn-github" href="https://drive.google.com/file/d/1VKVMNg2c1Zego80BP4D5t4wj1WNy8eJW/view?usp=sharing">
+            <a class="btn btn-github" href="https://drive.google.com/file/d/1zCCoAPZ8zEry36C0vH-uTlosRJ3JCLXo/view?usp=sharing">
                 ⬇ Скачать с GOOGLE DRIVE
             </a>
-            <a class="btn btn-yandex" href="https://disk.yandex.ru/d/NZ7oIO9hGwqdPw">
+            <a class="btn btn-yandex" href="https://disk.yandex.ru/d/-eYZwEuz5Z5ruw">
                 ⬇ Скачать с YANDEX DISK
             </a>
         </div>
