--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
         <h1>Добро пожаловать!</h1>
         <p>Скачайте последнюю версию PNS Bot установщика:</p>
         <div class="btn-container">
-            <a class="btn btn-github" href="https://drive.google.com/file/d/16FqdYhEyemeNQlJJ78gUAhkK96R2y8Uq/view?usp=sharing">
+            <a class="btn btn-github" href="https://drive.google.com/file/d/1IkJMUrd2IbSm0REc1dMVyYA6IlmSxdTZ/view?usp=sharing">
                 ⬇ Скачать с GOOGLE DRIVE
             </a>
-            <a class="btn btn-yandex" href="https://disk.yandex.ru/d/TF_G_w86HIw3Fg">
+            <a class="btn btn-yandex" href="https://disk.yandex.ru/d/eHKrHW7P_2PgCw">
                 ⬇ Скачать с YANDEX DISK
             </a>
         </div>
