--- a/index.html
+++ b/index.html
@@ -80,6 +80,14 @@
         .btn:active {
             transform: scale(0.98);
         }
+        .btn-instruction {
+            background: #28a745;
+            color: white;
+        }
+        .btn-instruction:hover {
+            background: #34d058;
+            transform: scale(1.05);
+        }
 
         /* Стили для соцсетей */
         .socials {
@@ -129,6 +137,9 @@
             </a>
             <a class="btn btn-yandex" href="https://disk.yandex.ru/d/2m7qPxGTfJkdYQ">
                 ⬇ Скачать с YANDEX DISK
+            </a>
+            <a class="btn btn-instruction" href="https://docs.google.com/document/d/1zh9vOi13L9L-cmXuvkCoCRcGsbJ1h6hhAtFV1Ba5ww8/edit?tab=t.8mpn86fejop0#heading=h.s6yzenn7q11b">
+                📖 Инструкция по установке
             </a>
         </div>
 
