--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 ⬇ Скачать с YANDEX DISK
             </a>
             <a class="btn btn-instruction" href="https://docs.google.com/document/d/1zh9vOi13L9L-cmXuvkCoCRcGsbJ1h6hhAtFV1Ba5ww8/edit?tab=t.8mpn86fejop0#heading=h.s6yzenn7q11b">
-                📖 Инструкция по установке
+                📖 Инструкция по настройке
             </a>
         </div>
 
