--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
         <h1>Добро пожаловать!</h1>
         <p>Скачайте последнюю версию PNS Bot установщика:</p>
         <div class="btn-container">
-            <a class="btn btn-github" href="https://drive.google.com/file/d/1-HEoz6uByK7pssL45MkIdUMsMULl8Q_A/view?usp=sharing">
+            <a class="btn btn-github" href="https://drive.google.com/file/d/11T8EX05nFZx7tAzWsEHE4b4tEQ-5BXls/view?usp=sharing">
                 ⬇ Скачать с GOOGLE DRIVE
             </a>
-            <a class="btn btn-yandex" href="https://disk.yandex.ru/d/2m7qPxGTfJkdYQ">
+            <a class="btn btn-yandex" href="https://disk.yandex.ru/d/Sip_7QKCX_GVKg">
                 ⬇ Скачать с YANDEX DISK
             </a>
             <a class="btn btn-instruction" href="https://docs.google.com/document/d/1zh9vOi13L9L-cmXuvkCoCRcGsbJ1h6hhAtFV1Ba5ww8/edit?tab=t.8mpn86fejop0#heading=h.s6yzenn7q11b">
