--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
         <h1>Добро пожаловать!</h1>
         <p>Скачайте последнюю версию PNS Bot установщика:</p>
         <div class="btn-container">
-            <a class="btn btn-github" href="https://drive.google.com/file/d/17lYd0gR2d1JGVBAQDzIRZCdIMvdkLxLI/view?usp=sharing">
+            <a class="btn btn-github" href="https://drive.google.com/file/d/1ExmYE1GqM44xJF5coYe9tTANqdjV5HHj/view?usp=sharing">
                 ⬇ Скачать с GOOGLE DRIVE
             </a>
-            <a class="btn btn-yandex" href="https://disk.yandex.ru/d/Sip_7QKCX_GVKg">
+            <a class="btn btn-yandex" href="https://disk.yandex.ru/d/9z06jsGtyJHIHw">
                 ⬇ Скачать с YANDEX DISK
             </a>
             <a class="btn btn-instruction" href="https://docs.google.com/document/d/1zh9vOi13L9L-cmXuvkCoCRcGsbJ1h6hhAtFV1Ba5ww8/edit?tab=t.8mpn86fejop0#heading=h.s6yzenn7q11b">
