--- a/index.html
+++ b/index.html
@@ -141,6 +141,9 @@
             <a class="btn btn-instruction" href="https://docs.google.com/document/d/1zh9vOi13L9L-cmXuvkCoCRcGsbJ1h6hhAtFV1Ba5ww8/edit?tab=t.8mpn86fejop0#heading=h.s6yzenn7q11b">
                 📖 Инструкция по настройке
             </a>
+            <a href="https://freekassa.net" target="_blank" rel="noopener noreferrer">
+              <img src="https://cdn.freekassa.net/banners/small-white-1.png" title="Купить ключ">
+            </a>
         </div>
 
         <!-- Ссылки на соцсети -->
