--- a/blokie/index.html
+++ b/blokie/index.html
@@ -5,199 +5,244 @@
     <title>Play Against an AI in Blockudoku/Woodoku/Block Sudoku </title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <script src="script.js" type="module"></script>
-<style>
+    <style>
+/* Основные стили страницы */
+body {
+    background-color: #2b2b2b;
+    color: #ffffff;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    border: none;
+    display: flex;
+    justify-content: center;
+    min-height: 100vh;
+    align-items: flex-start;
+    padding: 20px 0;
+}
 
-    body {
-        background-color: #2b2b2b;
-        color: #ffffff;
-        font-family: Arial, sans-serif;
-        margin: 0;
-        border: none;
-    }
-	.card {
-	  background-color: #333;          /* фон карточки */
-	  border-radius: 15px;             /* скруглённые углы */
-	  padding: 30px 40px;              /* внутренние отступы */
-	  box-shadow: 0 10px 30px rgba(0,0,0,0.3), inset 0 0 15px rgba(255,255,255,0.1); /* объём */
-	  max-width: 900px;                /* ограничение по ширине */
-	  margin: 40px auto;               /* центрирование и отступы сверху/снизу */
-	  color: white;                   /* текст на карточке */
+/* Карточка с отступами и тенью */
+.card {
+    background-color: #333;
+    border-radius: 15px;
+    padding: 30px 40px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3), inset 0 0 15px rgba(255, 255, 255, 0.1);
+    max-width: 900px;
+    width: 90vw;
+    color: white;
+    box-sizing: border-box;
+}
+
+/* Счёт */
+#score {
+    text-align: center;
+    font-family: Arial, sans-serif;
+    font-size: 5vh;
+    font-weight: bold;
+    margin-bottom: 3vh;
+    color: white;
+}
+
+/* Контейнер с фиксированным аспектом */
+#for-aspect-ratio {
+    aspect-ratio: 2 / 3;
+    width: 100%;
+    max-width: 600px;
+    margin: auto;
+}
+
+/* Контейнер таблиц */
+#game-table-container {
+    aspect-ratio: 1 / 1;
+    width: 100%;
+    max-width: 600px;
+    margin: auto;
+}
+
+/* Игровое поле - таблица */
+#game-board {
+    border-collapse: collapse;
+    background: white;
+    border: 4px solid black;
+    outline: 4px solid #3d3d3d;
+    margin: auto;
+    width: 100%;
+    height: auto;
+    table-layout: fixed; /* чтобы столбцы были равной ширины */
+}
+
+	/* Ячейки игрового поля квадратные */
+	#game-board tr td {
+		border: 0.5px solid black;
+		width: calc(100% / 9);
+		height: 0;
+		padding-bottom: calc(100% / 9); /* квадратная ячейка */
+		box-sizing: border-box;
+		position: relative;
+		transition: background-color 0.2s linear;
 	}
-    td {
-        transition: background-color 0.2s linear;
-    }
 
-    #page-description {
-        text-align: center;
+	#game-board tr:nth-of-type(-n+3) td:nth-child(n+4):nth-child(-n+6),
+	#game-board tr:nth-child(n+4):nth-child(-n+6) td:nth-child(-n+3),
+	#game-board tr:nth-child(n+4):nth-child(-n+6) td:nth-child(n+7):nth-child(-n+9),
+	#game-board tr:nth-child(n+7):nth-child(-n+9) td:nth-child(n+4):nth-child(-n+6) {
+		background: rgb(228, 233, 238)
+	}
+
+	#game-board tr:nth-of-type(n):nth-of-type(n) td.has-piece:nth-of-type(n):nth-of-type(n) {
+		background: rgb(54, 112, 232);
+		border: 1px solid black;
+	}
+
+	#game-board tr:nth-of-type(n):nth-of-type(n) td.piece-pending:nth-of-type(n):nth-of-type(n) {
+		background: pink
+	}
+
+
+/* Нижний контейнер фигур */
+#pieces-on-deck-container {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    border-collapse: collapse;
+    aspect-ratio: 3 / 1;
+    width: 100%;
+    max-width: 600px;
+    margin-top: 20px;
+    gap: 10px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+/* Таблицы фигур */
+table.pieces-on-deck {
+    border-collapse: collapse;
+    border-spacing: 0;
+    margin: 0;
+    width: 32%;
+    border: 0.5px solid #3d3d3d;
+    table-layout: fixed;
+    border-radius: 8px;
+    background-color: #444;
+    box-sizing: border-box;
+}
+
+/* Квадратные ячейки в таблицах фигур */
+table.pieces-on-deck tr td {
+    width: calc(100% / 5);
+    height: 0;
+    padding-bottom: calc(100% / 5);
+    box-sizing: border-box;
+    border: none;
+    background-color: #555;
+    transition: background-color 0.2s;
+    position: relative;
+}
+
+table.pieces-on-deck td,
+table.pieces-on-deck th {
+    padding: 0;
+}
+
+table.pieces-on-deck tr td.has-piece {
+    background: #0078D7;
+    border: 1px solid #004a99;
+    border-radius: 3px;
+}
+
+/* Подвал */
+.footer {
+    text-align: center;
+    font-size: 2vh;
+    color: #ccc;
+    margin-top: 25px;
+}
+
+/* Контейнер слайдера скорости */
+#speed-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+#speedometer-icon {
+    height: 4vh;
+}
+
+#speed {
+    width: 50%;
+}
+
+/* Кнопка Рисовать */
+#pause-button-container {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin-top: 20px;
+}
+
+#pause-button {
+    background-color: #0078D7;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 1.2em;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.2s;
+    box-sizing: border-box;
+    width: auto;
+    max-width: 300px;
+}
+
+#pause-button:hover {
+    background-color: #0095ff;
+    transform: scale(1.1);
+}
+
+#pause-button:active {
+    background-color: #004a99;
+}
+
+#pause-button.pause-active {
+    background-color: #28a745;
+}
+
+#pause-button.pause-inactive {
+    background-color: #0078D7;
+}
+
+/* Адаптив для маленьких экранов */
+@media (max-width: 600px) {
+    .card {
+        width: 95vw;
+        padding: 15px 20px;
     }
 
     #score {
-        text-align: center;
-        font-family: Arial, sans-serif;
-        font-size: 5vh;
-        font-weight: bold;
-        margin-bottom: 3vh;
-        color: white;
-    }
-
-    #for-aspect-ratio {
-        aspect-ratio: 2/3;
-        width: min(90vw, calc(90vh / (3/2)));
-        margin: auto;
-    }
-
-    #for-aspect-ratio #game-board tr:nth-of-type(3n) td {
-        border-bottom: 2px solid #444;
-    }
-
-    #for-aspect-ratio #game-board tr td:nth-of-type(3n) {
-        border-right: 2px solid #444;
-    }
-
-    #game-table-container {
-        aspect-ratio: 1 / 1;
-    }
-
-        #game-board {
-            border-collapse: collapse;
-            background: white;
-			border: 4px solid black; 
-		    outline: 4px solid #3d3d3d;  
-            margin: auto;
-            width: 100%;
-            height: 100%;
-        }
-
-        #game-board tr td {
-            width: 10%;
-            height: 10%;
-            border: 0.5px solid black;
-        }
-
-        #game-board tr:nth-of-type(-n+3) td:nth-child(n+4):nth-child(-n+6),
-        #game-board tr:nth-child(n+4):nth-child(-n+6) td:nth-child(-n+3),
-        #game-board tr:nth-child(n+4):nth-child(-n+6) td:nth-child(n+7):nth-child(-n+9),
-        #game-board tr:nth-child(n+7):nth-child(-n+9) td:nth-child(n+4):nth-child(-n+6) {
-            background: rgb(228, 233, 238)
-        }
-
-        #game-board tr:nth-of-type(n):nth-of-type(n) td.has-piece:nth-of-type(n):nth-of-type(n) {
-            background: rgb(54, 112, 232);
-            border: 1px solid black;
-        }
-
-        #game-board tr:nth-of-type(n):nth-of-type(n) td.piece-pending:nth-of-type(n):nth-of-type(n) {
-            background: pink
-        }
-
-
-
-    #game-board tr td.has-piece {
-        background: #0078D7;
-        border: 1px solid #004a99;
-    }
-
-    #game-board tr td.piece-pending {
-        background: #ed143b; /* тёмно-красный из .rtb */
-    }
-
-    @media (hover: hover) and (pointer: fine) {
-        #game-board td:hover {
-            outline: 4px solid #0095ff;
-        }
-
-        table.pieces-on-deck tr td:hover {
-            outline: 4px solid #0095ff;
-        }
+        font-size: 4vh;
     }
 
     #pieces-on-deck-container {
-        display: flex;
-        margin-left: auto;
-        margin-right: auto;
-        border-collapse: collapse;
-        aspect-ratio: 3 / 1;
-        width: 100%;
+        flex-direction: row;
+        max-width: 100%;
+        aspect-ratio: auto;
     }
 
     table.pieces-on-deck {
-        border-collapse: collapse;
-        border-spacing: 0;
-        margin: 3px;
-        width: 33%;
-		border: 0.5px solid #3d3d3d; /* рамки убраны */
-    }
-
-    table.pieces-on-deck td,
-    table.pieces-on-deck th {
-        padding: 0;
-    }
-
-	table.pieces-on-deck tr td {
-		width: 20%;
-		height: 20%;
-	}
-
-	table.pieces-on-deck tr td.has-piece {
-		background: #0078D7;
-		border: 1px solid #004a99;
-	}
-
-    .footer {
-        text-align: center;
-        font-size: 2vh;
-        color: #ccc;
-    }
-
-    #speed-container {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    #speedometer-icon {
-        height: 4vh;
-    }
-
-    #speed {
-        width: 50%;
-    }
-
-    #pause-button-container {
-        display: flex;
-        justify-content: center;
-        text-align: center;
+        width: 30%;
+        margin-bottom: 1px;
     }
 
     #pause-button {
-        background-color: #0078D7;
-        color: white;
-        border: none;
-        padding: 10px 20px;
-        font-size: 1.2em;
-        border-radius: 5px;
-        cursor: pointer;
-        transition: background-color 0.3s, transform 0.2s;
+        width: 100%;
+        max-width: none;
+        font-size: 1em;
+        padding: 12px 0;
     }
+}
 
-    #pause-button:hover {
-        background-color: #0095ff;
-        transform: scale(1.1);
-    }
-
-    #pause-button:active {
-        background-color: #004a99;
-    }
-
-    #pause-button.pause-active {
-        background-color: #28a745;
-    }
-
-    #pause-button.pause-inactive {
-        background-color: #0078D7;
-    }
-</style>
-
+    </style>
     <meta name="google-site-verification" content="a62LBKJ5-DBNPPVbH1buHMLMT1CEM5j456tPhU30GCE" />
     <meta name="description"
         content="Test your skills against an AI in Blockudoku/Woodoku/Block Sudoku ! Try to sabotage the computer's perfect gameplay by altering the board or pieces. Learn, be inspired, or vent your frustration." />
