--- a/blokie/index.html
+++ b/blokie/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <link rel="icon" type="image/x-icon" href="../favicon-32x32.png">
     <title>Play Against an AI in Blockudoku/Woodoku/Block Sudoku </title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <script src="script.js" type="module"></script>
