--- a/index.html
+++ b/index.html
@@ -88,6 +88,15 @@
             background: #34d058;
             transform: scale(1.05);
         }
+        /* Новая кнопка */
+        .btn-tetromino {
+            background: #ff6f00;
+            color: white;
+        }
+        .btn-tetromino:hover {
+            background: #ffa000;
+            transform: scale(1.05);
+        }
 
         /* Стили для соцсетей */
         .socials {
@@ -141,24 +150,27 @@
             <a class="btn btn-instruction" href="https://docs.google.com/document/d/1zh9vOi13L9L-cmXuvkCoCRcGsbJ1h6hhAtFV1Ba5ww8/edit?tab=t.8mpn86fejop0#heading=h.s6yzenn7q11b">
                 📖 Инструкция по настройке
             </a>
+            <a class="btn btn-tetromino" href="https://pnsbot.ru/blokie/index.html" target="_blank" rel="noopener noreferrer">
+                🎮 Мастер Тетромино онлайн
+            </a>
         </div>
 
         <!-- Ссылки на соцсети -->
         <div class="socials">
             <a class="social-link tg" href="https://t.me/puzzle_survival">
-                <img class="social-icon" src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg">
+                <img class="social-icon" src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram">
                 Telegram
             </a>
             <a class="social-link vk" href="https://vk.com/club228645535">
-                <img class="social-icon" src="https://upload.wikimedia.org/wikipedia/commons/2/21/VK.com-logo.svg">
+                <img class="social-icon" src="https://upload.wikimedia.org/wikipedia/commons/2/21/VK.com-logo.svg" alt="VK">
                 ВКонтакте
             </a>
             <a class="social-link yt" href="https://youtube.com/@pick_megirl?si=0QOx2JFg0ybyS7hN">
-                <img class="social-icon" src="https://upload.wikimedia.org/wikipedia/commons/f/fd/YouTube_full-color_icon_%282024%29.svg">
+                <img class="social-icon" src="https://upload.wikimedia.org/wikipedia/commons/f/fd/YouTube_full-color_icon_%282024%29.svg" alt="YouTube">
                 YouTube
             </a>
             <a class="social-link rtb" href="https://rutube.ru/channel/51630057">
-                <img class="social-icon" src="https://upload.wikimedia.org/wikipedia/commons/0/0e/Rutube_icon.svg">
+                <img class="social-icon" src="https://upload.wikimedia.org/wikipedia/commons/0/0e/Rutube_icon.svg" alt="RuTube">
                 RuTube
             </a>
         </div>
