--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
         }
         /* Новая кнопка */
         .btn-tetromino {
-            background: #ff6f00;
+            background: #28a745;
             color: white;
         }
         .btn-tetromino:hover {
-            background: #ffa000;
+            background: #34d058;
             transform: scale(1.05);
         }
 
