--- a/blokie/index.html
+++ b/blokie/index.html
@@ -2,6 +2,15 @@
 <html>
 
 <head>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-506H2FQ71K"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	
+	  gtag('config', 'G-506H2FQ71K');
+	</script>
     <link rel="icon" type="image/x-icon" href="../favicon-32x32.png">
     <title>Play Against an AI in Blockudoku/Woodoku/Block Sudoku </title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
