--- a/blokie/index.html
+++ b/blokie/index.html
@@ -12,7 +12,7 @@
 	  gtag('config', 'G-506H2FQ71K');
 	</script>
     <link rel="icon" type="image/x-icon" href="../favicon-32x32.png">
-    <title>Play Against an AI in Blockudoku/Woodoku/Block Sudoku </title>
+    <title></title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <script src="script.js" type="module"></script>
     <style>
