--- a/blokie/index.html
+++ b/blokie/index.html
@@ -12,7 +12,7 @@
 	  gtag('config', 'G-506H2FQ71K');
 	</script>
     <link rel="icon" type="image/x-icon" href="../favicon-32x32.png">
-    <title></title>
+    <title>Мастер Тетромино онлайн</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <script src="script.js" type="module"></script>
     <style>
@@ -200,7 +200,7 @@
     </style>
     <meta name="google-site-verification" content="a62LBKJ5-DBNPPVbH1buHMLMT1CEM5j456tPhU30GCE" />
     <meta name="description"
-        content="Test your skills against an AI in Blockudoku/Woodoku/Block Sudoku ! Try to sabotage the computer's perfect gameplay by altering the board or pieces. Learn, be inspired, or vent your frustration." />
+        content="Мастер Тетромино онлайн." />
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-JSG4CGEK2S"></script>
