--- a/water_sort/puzzle-n-survival/index.html
+++ b/water_sort/puzzle-n-survival/index.html
@@ -11,9 +11,10 @@
     <link rel="shortcut icon" href="favicon-32x32.png" type="image/x-icon" />
     <link rel="icon" href="favicon-32x32.png" type="image/x-icon" />
 
-    <link rel="stylesheet" href="../../maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="../../maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css" />
-    <link rel="stylesheet" href="styles/index.css" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css" />
+	<link rel="stylesheet" href="styles/index
+
 </head>
 <body>
 	<div class="container" style="max-width: 435px; margin: 0 auto; padding-top: 15px;">
