--- a/index.html
+++ b/index.html
@@ -145,6 +145,12 @@
         .rtb { background: #ed143b; }
     </style>
 </head>
+<script>
+  function toggleDropdown() {
+    const dropdown = document.getElementById('dropdown-tools');
+    dropdown.style.display = dropdown.style.display === 'flex' ? 'none' : 'flex';
+  }
+</script>
 <body>
     <div class="container">
         <h1>Добро пожаловать!</h1>
@@ -159,10 +165,22 @@
             <a class="btn btn-instruction" href="https://docs.google.com/document/d/1zh9vOi13L9L-cmXuvkCoCRcGsbJ1h6hhAtFV1Ba5ww8/edit?tab=t.8mpn86fejop0#heading=h.s6yzenn7q11b">
                 📖 Инструкция по настройке
             </a>
-            <a class="btn btn-tetromino" href="https://pnsbot.ru/blokie/index.html" target="_blank" rel="noopener noreferrer">
-                🎮 Мастер Тетромино онлайн
-            </a>
         </div>
+        <!-- Кнопка-группа с выпадающим списком -->
+        <div style="position: relative;">
+            <button class="btn btn-beta" onclick="toggleDropdown()" style="width: 100%;">
+                🧩 Игровые инструменты ▼
+            </button>
+            <div id="dropdown-tools" style="display: none; margin-top: 10px; flex-direction: column; gap: 10px;">
+                <a class="btn btn-tetromino" href="https://pnsbot.ru/blokie/index.html" target="_blank">
+                    🎮 Мастер Тетромино онлайн
+                </a>
+                <a class="btn btn-tetromino" href="https://pnsbot.ru/water_sort/puzzle-n-survival/index.html" target="_blank">
+                    🧪 Сортировка Реагентов онлайн
+                </a>
+            </div>
+        </div>
+
 
         <!-- Ссылки на соцсети -->
         <div class="socials">
