--- a/index.html
+++ b/index.html
@@ -143,12 +143,33 @@
         .yt { background: white; color: #000000; }
         .vk { background: #4c75a3; }
         .rtb { background: #ed143b; }
+
+        .dropdown-wrapper {
+          display: flex;
+          flex-direction: column;
+          gap: 15px;
+        }
+        
+        .dropdown-content {
+          overflow: hidden;
+          max-height: 0;
+          opacity: 0;
+          transition: max-height 0.4s ease, opacity 0.3s ease;
+          display: flex;
+          flex-direction: column;
+          gap: 15px;
+        }
+        .dropdown-content.open {
+          max-height: 300px; /* достаточно для двух кнопок */
+          opacity: 1;
+        }
+
     </style>
 </head>
 <script>
   function toggleDropdown() {
-    const dropdown = document.getElementById('dropdown-tools');
-    dropdown.style.display = dropdown.style.display === 'flex' ? 'none' : 'flex';
+    const content = document.getElementById('dropdown-tools');
+    content.classList.toggle('open');
   }
 </script>
 <body>
@@ -166,20 +187,21 @@
                 📖 Инструкция по настройке
             </a>
         </div>
-        <!-- Кнопка-группа с выпадающим списком -->
-        <div style="position: relative;">
-            <button class="btn btn-beta" onclick="toggleDropdown()" style="width: 100%;">
-                🧩 Игровые инструменты ▼
-            </button>
-            <div id="dropdown-tools" style="display: none; margin-top: 10px; flex-direction: column; gap: 10px;">
-                <a class="btn btn-tetromino" href="https://pnsbot.ru/blokie/index.html" target="_blank">
-                    🎮 Мастер Тетромино онлайн
-                </a>
-                <a class="btn btn-tetromino" href="https://pnsbot.ru/water_sort/puzzle-n-survival/index.html" target="_blank">
-                    🧪 Сортировка Реагентов онлайн
-                </a>
-            </div>
+        <!-- Кнопка-группа с плавным выпадающим списком -->
+        <div class="dropdown-wrapper">
+          <button class="btn btn-beta" onclick="toggleDropdown()">
+            🧩 Игровые инструменты ▼
+          </button>
+          <div id="dropdown-tools" class="dropdown-content">
+            <a class="btn btn-tetromino" href="https://pnsbot.ru/blokie/index.html" target="_blank">
+              🎮 Мастер Тетромино онлайн
+            </a>
+            <a class="btn btn-tetromino" href="https://pnsbot.ru/sort/index.html" target="_blank">
+              🧪 Сортировка реагентов онлайн
+            </a>
+          </div>
         </div>
+
 
 
         <!-- Ссылки на соцсети -->
