--- a/index.html
+++ b/index.html
@@ -171,6 +171,12 @@
 
 
     </style>
+<script>
+  function toggleDropdown() {
+    const el = document.getElementById('dropdown-tools');
+    el.classList.toggle('open');
+  }
+</script>
 <body>
     <div class="container">
         <h1>Добро пожаловать!</h1>
