--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <a class="btn btn-tetromino" href="https://pnsbot.ru/blokie/index.html" target="_blank">
               🎮 Мастер Тетромино онлайн
             </a>
-            <a class="btn btn-tetromino" href="https://pnsbot.ru/sort/index.html" target="_blank">
+            <a class="btn btn-tetromino" href="https://pnsbot.ru/water_sort/puzzle-n-survival/index.html" target="_blank">
               🧪 Сортировка реагентов онлайн
             </a>
           </div>
