--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
               🎮 Мастер Тетромино онлайн
             </a>
             <a class="btn btn-tetromino" href="https://pnsbot.ru/water_sort/puzzle-n-survival/index.html" target="_blank">
-              🧪 Сортировка реагентов онлайн
+              🧪 Сортировка Реагентов онлайн
             </a>
           </div>
         </div>
