--- a/index.html
+++ b/index.html
@@ -162,12 +162,13 @@
           display: flex;
           flex-direction: column;
           gap: 15px;
-        }
-        
+        padding: 0 5px; /* по бокам добавляем по 5px */
+     
         .dropdown-content.open {
-          max-height: 200px; /* высота с запасом */
+          max-height: 500px; /* увеличена, чтобы вместить масштаб */
           opacity: 1;
         }
+
 
 
     </style>
