--- a/index.html
+++ b/index.html
@@ -162,7 +162,8 @@
           display: flex;
           flex-direction: column;
           gap: 15px;
-        padding: 0 5px; /* по бокам добавляем по 5px */
+          padding: 0 5px; /* по бокам добавляем по 5px */
+        }
      
         .dropdown-content.open {
           max-height: 500px; /* увеличена, чтобы вместить масштаб */
@@ -195,7 +196,7 @@
         </div>
         <div class="dropdown-wrapper">
           <button class="btn btn-beta dropdown-toggle" onclick="toggleDropdown()">
-            🧩 Игровые инструменты ▼
+            🧩 Мини Игры онлайн ▼
           </button>
           <div id="dropdown-tools" class="dropdown-content">
             <a class="btn btn-tetromino" href="https://pnsbot.ru/blokie/index.html" target="_blank">
