--- a/index.html
+++ b/index.html
@@ -97,10 +97,13 @@
             background: #34d058;
             transform: scale(1.05);
         }
+
         /* Новая кнопка */
         .btn-tetromino {
             background: #28a745;
             color: white;
+            font-size: 15.3px;   /* уменьшено на 15% от 18px */
+            padding: 12.75px;    /* уменьшено на 15% от 15px */
         }
         .btn-tetromino:hover {
             background: #34d058;
