--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
             color: white;
             font-size: 15.3px;   /* уменьшено на 15% от 18px */
             padding: 12.75px;    /* уменьшено на 15% от 15px */
+            width: 85%; /* уменьшена ширина */
+            align-self: center; /* чтобы кнопки были по центру контейнера */
         }
         .btn-tetromino:hover {
             background: #34d058;
