--- a/index.html
+++ b/index.html
@@ -173,6 +173,10 @@
           max-height: 200px; /* увеличена, чтобы вместить масштаб */
           opacity: 1;
         }
+        .btn-beta.dropdown-toggle {
+          box-shadow: none;
+        }
+
 
 
 
