--- a/index.html
+++ b/index.html
@@ -175,6 +175,8 @@
         }
         .btn-beta.dropdown-toggle {
           box-shadow: none;
+          border: none;
+          outline: none;
         }
 
 
