--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
         .dropdown-content.open {
           max-height: 200px; /* увеличена, чтобы вместить масштаб */
           opacity: 1;
+          margin-top: 15px;
         }
         .btn-beta.dropdown-toggle {
           box-shadow: none;
