--- a/water_sort/puzzle-n-survival/index.html
+++ b/water_sort/puzzle-n-survival/index.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Настройка и решатель головоломки Purifying Reagents из игры Puzzle and Survival" />
     <meta name="author" content="470[TPM]OB-HAVE" />
-    <title>Решатель Water Sort, Puzzle &amp; Survival</title>
+    <title>Решатель Сортировки Реагентов в игре Puzzle &amp; Survival</title>
 
     <link rel="shortcut icon" href="favicon-32x32.png" type="image/x-icon" />
     <link rel="icon" href="favicon-32x32.png" type="image/x-icon" />
@@ -32,6 +32,7 @@
         <a style="font-size:small;" href="https://www.robertfidler.com/puzzle-n-survival/index.html" target="_blank">Решатель Water Sort и Ball Sort</a>
         <div style="clear: both; text-align: left;">
           <p>Ссылка выше ведёт на оригинальную версию, которую я использовал для создания своей версии решателя Water Sort. Особая благодарность автору.</p>
+	  <p>Прокрутите вниз, чтобы прочитать инструкцию и выставить цвета.</p>
         </div>
       </li>
     </ul>
